force-app/main/default/objects/MPM4_BASE__Milestone1_Task_Resource__c/MPM4_BASE__Milestone1_Task_Resource__c.object-meta.xml
<CustomObject>
    <label>Task Resource</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Task Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>