force-app/main/default/objects/MPM4_BASE__Milestone1_Task_Resource__c/fields/MPM4_BASE__Resource_Contact__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Contact__c</fullName>
    <formula>MPM4_BASE__Resource__r.MPM4_BASE__Contact__r.FirstName + &apos; &apos; + MPM4_BASE__Resource__r.MPM4_BASE__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Contact</label>
    <type>Text</type>
</CustomField>