force-app/main/default/objects/MPM4_BASE__Milestone1_Task_Resource__c/fields/MPM4_BASE__Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Name__c</fullName>
    <formula>MPM4_BASE__Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>