force-app/main/default/objects/MPM4_BASE__Milestone1_Task_Resource__c/fields/MPM4_BASE__Resource_Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Skill_Set__c</fullName>
    <formula>LEFT(
IF ( INCLUDES (  MPM4_BASE__Resource__r.MPM4_BASE__Resource_Skill_Set__c  , &quot;Customer Support&quot; ), &quot;Customer Support; &quot;,null ) &amp;
IF ( INCLUDES ( MPM4_BASE__Resource__r.MPM4_BASE__Resource_Skill_Set__c , &quot;Project Management&quot; ), &quot;Project Management; &quot;,null ) &amp;
IF ( INCLUDES ( MPM4_BASE__Resource__r.MPM4_BASE__Resource_Skill_Set__c , &quot;Technical&quot; ), &quot;Technical; &quot;, null ), 
    LEN(IF ( INCLUDES (  MPM4_BASE__Resource__r.MPM4_BASE__Resource_Skill_Set__c  , &quot;Customer Support&quot; ), &quot;Customer Support; &quot;,null ) &amp;
        IF ( INCLUDES ( MPM4_BASE__Resource__r.MPM4_BASE__Resource_Skill_Set__c , &quot;Project Management&quot; ), &quot;Project Management; &quot;,null ) &amp;
        IF ( INCLUDES ( MPM4_BASE__Resource__r.MPM4_BASE__Resource_Skill_Set__c , &quot;Technical&quot; ), &quot;Technical; &quot;, null ))-2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Skill Set</label>
    <type>Text</type>
</CustomField>