force-app/main/default/objects/MPM4_BASE__Milestone1_Task_Resource__c/fields/MPM4_BASE__Resource_Teams__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_Teams__c</fullName>
    <formula>LEFT(
    IF ( INCLUDES (  MPM4_BASE__Resource__r.MPM4_BASE__Resource_Teams__c  , &quot;Sales&quot; ), &quot;Sales; &quot;,null ) &amp;
    IF ( INCLUDES ( MPM4_BASE__Resource__r.MPM4_BASE__Resource_Teams__c , &quot;Support&quot; ), &quot;Support; &quot;,null ) &amp;
    IF ( INCLUDES ( MPM4_BASE__Resource__r.MPM4_BASE__Resource_Teams__c , &quot;Technical&quot; ), &quot;Technical; &quot;,null ), 
    LEN(IF ( INCLUDES (  MPM4_BASE__Resource__r.MPM4_BASE__Resource_Teams__c  , &quot;Sales&quot; ), &quot;Sales; &quot;,null ) &amp;
    IF ( INCLUDES ( MPM4_BASE__Resource__r.MPM4_BASE__Resource_Teams__c , &quot;Support&quot; ), &quot;Support; &quot;,null ) &amp;
    IF ( INCLUDES ( MPM4_BASE__Resource__r.MPM4_BASE__Resource_Teams__c , &quot;Technical&quot; ), &quot;Technical; &quot;,null ))-2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Teams</label>
    <type>Text</type>
</CustomField>