force-app/main/default/objects/MPM4_BASE__Milestone1_Task_Resource__c/fields/MPM4_BASE__Resource_User_Is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Resource_User_Is_Inactive__c</fullName>
    <formula>MPM4_BASE__Resource__r.MPM4_BASE__Inactive_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource User Is Inactive</label>
    <type>Checkbox</type>
</CustomField>