force-app/main/default/objects/MPM4_BASE__Milestone1_Task_Resource__c/fields/MPM4_BASE__Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Task</label>
    <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
    <relationshipLabel>Task Resources</relationshipLabel>
    <relationshipName>Task_Resources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>